--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="container">
-	 <form action="https://formspree.io/f/mnqwnaky" method="POST" id="my-form">
+	 <form action="https://formspree.io/f/mayvqgkq" method="POST" id="my-form">
         <h1>Confirm Your Cash On Delivary</h1>
         <div class="first-row">
             <div class="owner">
